[gd_scene load_steps=5 format=3 uid="uid://edmi5jtva5y2"]

[ext_resource type="Script" path="res://Scenes/turrets/turret.gd" id="1_1ydqt"]
[ext_resource type="Texture2D" uid="uid://cmya1gnj3jkgf" path="res://Assets/turrets/techno turret1.png" id="1_fctl6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aicnu"]
radius = 22.8

[sub_resource type="CircleShape2D" id="CircleShape2D_kae7m"]
radius = 230.11

[node name="Turret" type="Node2D"]
script = ExtResource("1_1ydqt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_fctl6")

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_aicnu")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_kae7m")

[node name="AttackCooldown" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="attack"]
